--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "no-undef": "error",
     "no-console": "off",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
   },
   "env": {
     "browser": true,
