--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.17",
     "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
@@ -40,6 +41,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
