--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.13",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
@@ -38,6 +39,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -46,6 +48,7 @@
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.21.4"
