--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
@@ -52,6 +51,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
     "tsc-alias": "^1.8.8",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1",
