--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "dest": "dist/server.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "http://localhost:3000"
       }
     }
   ]
