--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/server.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "https://jobsterr.vercel.app"
-      }
+      "dest": "dist/server.js"
     }
   ]
 }
